Emacs: add describe variable/function commands to README

--- a/README.org
+++ b/README.org
@@ -155,3 +155,7 @@ Don't open these apps in fullscreen mode and you will switch between them immedi
 `SPC a i` open init.el file
 
 `SPC a p` open package.el file
+
+`SPC h v` describe variable
+
+`SPC h f` describe function
