Alacritty: add single-combo keys for Emacs/Vim

--- a/README.org
+++ b/README.org
@@ -92,7 +92,7 @@ I also mapped Cmd+hjkl to vim-like cursor movements in Mac OS. It's useful in al
 | Cmd-w   | close current window (or you can use C-d)                                                       |
 | Cmd-[   | go to the left window                                                                           |
 | Cmd-]   | go to the right window                                                                          |
-| Cmd-f   | enter copy mode (use q or Enter to exit) and you can use vi movements (hjkl C-d C-u) and search |
+| Cmd-r   | enter copy mode (use q or Enter to exit) and you can use vi movements (hjkl C-d C-u) and search |
 |---------+-------------------------------------------------------------------------------------------------|
 
 
