WebStorm: update keybindings in README

--- a/README.org
+++ b/README.org
@@ -60,7 +60,9 @@
 | Cmd-u            | autoformat code                   |
 | Ctrl-l           | toggle line numbers               |
 | Cmd-.            | run test                          |
-| Ctrl-.           | debug test                        |
+| Ctrl-.           | debug/resume test                 |
+| Cmd-i            | toggle breakpoint                 |
+| Cmd-d            | show errors                       |
 |------------------+-----------------------------------|
 
 
