--- a/README.org
+++ b/README.org
@@ -53,6 +53,7 @@
 |------------------+-----------------------------------|
 | Command          | Action                            |
 |------------------+-----------------------------------|
+| Cmd-2            | open built-in terminal            |
 | Cmd-o            | open recent project               |
 | Cmd-p            | toggle project tool window        |
 | Cmd-f            | find in files                     |
@@ -64,6 +65,14 @@
 | Cmd-i            | toggle breakpoint                 |
 | Cmd-d            | show errors                       |
 |------------------+-----------------------------------|
+
+You need to remap Cmd+hjkl to Left,Down,Up,Right in WebStorm.
+One caveat: Cmd+h is MacOS keybinding, so need to do the following:
+
+System Preferences > Keyboard > Shortcuts > App Shortcuts, hit the + button, select WebStorm, and set the Menu Title to (exactly) "Hide WebStorm".
+Then, click the Keyboard Shortcut box and create a shortcut that definitely won't interfere with your workflow. I chose `cmd+shift+ctrl+0`.
+
+I've found it [here](https://intellij-support.jetbrains.com/hc/en-us/community/posts/115000749630-macOS-Remap-cmd-h)
 
 
 ** Tmux
